# django-wagtail-lab

./: .gitignore  Dockerfile  db.sqlite3  manage.py  mix-manifest.json  package-lock.json  package.json  pyproject.toml  webpack.mix.js
.bruno/: Nombre.bru  Pagianas y contenido.bru  Paginas.bru  bruno.json
api/: urls.py  views.py
chat/: consumers.py  routing.py  urls.py  views.py
chat/assets/js/chat/: App.js  index.js
chat/templates/chat/: react.html
hotreload/templatetags/: hotreload.py
lab/: asgi.py  urls.py  wsgi.py
lab/settings/: base.py  dev.py
lab/templates/: base.html
website/: blocks.py  models.py  wagtail_hooks.py
website/graphql/: schema.py
website/migrations/: 0001_initial.py
website/static/css/: cards.css  tabbed-struct-block.css
website/templates/blocks/: card.html  cards_deck.html
website/templates/website/: website_page.html
